gateway/higress/tracing/envoyfilter_jager.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: higress-trace
  namespace: higress-system
spec:
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          name: envoy.filters.network.http_connection_manager
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            tracing:
              provider:
                name: envoy.tracers.opentelemetry
                typed_config:
                  '@type': type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                  service_name: higress-gateway.higress-system
                  grpc_service:
                    envoy_grpc:
                      cluster_name: outbound|4317||jaeger-collector.op-system.svc.cluster.local
                    timeout: 0.250s
              random_sampling:
                value: 100
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: MERGE
        value:
          name: envoy.filters.http.router
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            start_child_span: true
