gateway/higress/tracing/higress.yaml
---
# Source: higress/charts/higress-console/templates/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: higress-console-grafana
  namespace: higress-system
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http-grafana
  selector:
    app: higress-console-grafana
  sessionAffinity: None
  type: ClusterIP
---
# Source: higress/charts/higress-console/templates/prometheus.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: higress-console-prometheus
  name: higress-console-prometheus
  namespace: higress-system
spec:
  type: ClusterIP
  ports:
  - port: 9090
    protocol: TCP
    targetPort: http-prometheus
  selector:
    app: higress-console-prometheus
---
# Source: higress/charts/higress-console/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: higress-console
  namespace: higress-system
  labels:
    helm.sh/chart: higress-console-1.0.1
    app.kubernetes.io/name: higress-console
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: higress-console
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: higress/charts/higress-core/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: higress-controller
  labels:
    helm.sh/chart: higress-core-1.0.0
    app: higress-controller
    higress: higress-controller
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-controller
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: grpc
      port: 15051
      protocol: TCP
      targetPort: 15051
    - port: 15010
      name: grpc-xds # plaintext
      protocol: TCP
    - port: 15012
      name: https-dns # mTLS with k8s-signed cert
      protocol: TCP
    - port: 443
      name: https-webhook # validation and injection
      targetPort: 15017
      protocol: TCP
    - port: 15014
      name: http-monitoring # prometheus stats
      protocol: TCP
  selector:
    app: higress-controller
    higress: higress-controller
---
# Source: higress/charts/higress-core/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: higress-gateway
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-1.0.0
    app: higress-gateway
    higress: higress-system-higress-gateway
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-gateway
  annotations:
    {}
spec:
  type: LoadBalancer
  ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: higress-gateway
    higress: higress-system-higress-gateway
---
# Source: higress/charts/higress-console/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: higress-console
  namespace: higress-system
  labels:
    helm.sh/chart: higress-console-1.0.1
    app.kubernetes.io/name: higress-console
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: higress-console
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: higress-console
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: higress-console
      securityContext:
        {}
      containers:
        - name: higress-console
          securityContext:
            {}
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/console:1.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      volumes:
---
# Source: higress/charts/higress-console/templates/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: higress-console-grafana
  namespace: higress-system
  labels:
    app: higress-console-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: higress-console-grafana
  template:
    metadata:
      labels:
        app: higress-console-grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
        - 0
      containers:
      - name: grafana
        image: grafana/grafana:9.3.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http-grafana
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /robots.txt
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: higress-console-grafana
        - name: config
          mountPath: "/etc/grafana/grafana.ini"
          subPath: grafana.ini
      volumes:
      - name: higress-console-grafana
        persistentVolumeClaim:
          claimName: higress-console-grafana
      - name: config
        configMap:
          name:  higress-console-grafana
---
# Source: higress/charts/higress-console/templates/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: higress-console-prometheus
  name: higress-console-prometheus
  namespace: higress-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: higress-console-prometheus
  template:
    metadata:
      labels:
        app: higress-console-prometheus
    spec:
      containers:
      - image: prom/prometheus:v2.40.7
        name: prometheus
        command:
        - "/bin/prometheus"
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--web.external-url=/prometheus"
        - "--storage.tsdb.path=/prometheus"
        - "--storage.tsdb.retention=6h"
        ports:
        - containerPort: 9090
          name: http-prometheus
          protocol: TCP
        volumeMounts:
        - mountPath: "/prometheus"
          name: data
        - mountPath: "/etc/prometheus"
          name: config
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
      restartPolicy: Always
      serviceAccountName: higress-console-prometheus
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: higress-console-prometheus
      - name: config
        configMap:
          name: higress-console-prometheus
---
# Source: higress/charts/higress-core/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: higress-controller
  labels:
    helm.sh/chart: higress-core-1.0.0
    app: higress-controller
    higress: higress-controller
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: higress-controller
      higress: higress-controller
  template:
    metadata:
      labels:
        app: higress-controller
        higress: higress-controller
    spec:
      serviceAccountName: higress-controller
      securityContext:
        {}
      containers:
        - name: discovery
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/pilot:1.0.0"
          args:
          - "discovery"
          - --monitoringAddr=:15014
          - --log_output_level=default:info
          - --domain
          - cluster.local
          - --keepaliveMaxServerConnectionAge
          - "30m"
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 15010
            protocol: TCP
          - containerPort: 15017
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 5
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - name: config
            mountPath: /etc/istio/config
          - name: local-certs
            mountPath: /var/run/secrets/istio-dns
          - name: cacerts
            mountPath: /etc/cacerts
            readOnly: true
          - name: istio-kubeconfig
            mountPath: /var/run/secrets/remote
            readOnly: true
        - name: higress-core
          securityContext:
            {}
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/higress:1.0.0"
          args:
          - "serve"
          - --gatewaySelectorKey=higress
          - --gatewaySelectorValue=higress-system-higress-gateway
          - --ingressClass=higress
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: grpc
              containerPort: 15051
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 8888
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 5
          volumeMounts:
          - name: log
            mountPath: /var/log
      volumes:
      - name: log
        emptyDir: {}
      - name: config
        configMap:
          name: higress-config
      # Technically not needed on this pod - but it helps debugging/testing SDS
      # Should be removed after everything works.
      - emptyDir:
          medium: Memory
        name: local-certs
      # Optional: user-generated root
      - name: cacerts
        secret:
          secretName: cacerts
          optional: true
      - name: istio-kubeconfig
        secret:
          secretName: istio-kubeconfig
          optional: true
---
# Source: higress/charts/higress-core/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: higress-gateway
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-1.0.0
    app: higress-gateway
    higress: higress-system-higress-gateway
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-gateway
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: higress-gateway
      higress: higress-system-higress-gateway
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 100%
  template:
    metadata:
      annotations:
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        sidecar.istio.io/inject: "false"
        app: higress-gateway
        higress: higress-system-higress-gateway
    spec:
      serviceAccountName: higress-gateway
      securityContext:
      containers:
        - name: higress-gateway
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/gateway:1.0.0"
          args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=all:info
            - --serviceCluster=higress-gateway
          securityContext:
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            runAsUser: 0
            runAsGroup: 1337
            runAsNonRoot: false
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: true
          ports:
          - containerPort: 15090
            protocol: TCP
            name: http-envoy-prom
          - containerPort: 80
            hostPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            hostPort: 443
            name: https
            protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
          - name: config
            mountPath: /etc/istio/config
          - name: istio-ca-root-cert
            mountPath: /var/run/secrets/istio
          - name: istio-data
            mountPath: /var/lib/istio/data
          - name: podinfo            
            mountPath: /etc/istio/pod
          - name: proxy-socket
            mountPath: /etc/istio/proxy
      volumes:
      - name: istio-ca-root-cert
        configMap:
          name: higress-ca-root-cert
      - name: config
        configMap:
          name: higress-config
      - name: istio-data
        emptyDir: {}
      - name: proxy-socket
        emptyDir: {}
      - name: podinfo
        downwardAPI:
          defaultMode: 420
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.annotations
            path: annotations
          - path: cpu-request
            resourceFieldRef:
              containerName: higress-gateway
              divisor: 1m
              resource: requests.cpu
          - path: cpu-limit
            resourceFieldRef:
              containerName: higress-gateway
              divisor: 1m
              resource: limits.cpu
---
# Source: higress/charts/higress-console/templates/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higress-console-grafana
  namespace: higress-system
  labels:
    helm.sh/chart: higress-console-1.0.1
    app.kubernetes.io/name: higress-console
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  ingressClassName: higress
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: higress-console-grafana
                port:
                  number: 3000
      host: "console.higress.io"
---
# Source: higress/charts/higress-console/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higress-console
  namespace: higress-system
  labels:
    helm.sh/chart: higress-console-1.0.1
    app.kubernetes.io/name: higress-console
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  ingressClassName: higress
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: higress-console
                port:
                  number: 8080
      host: "console.higress.io"
---
# Source: higress/charts/higress-console/templates/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higress-console-prometheus
  namespace: higress-system
  labels:
    helm.sh/chart: higress-console-1.0.1
    app.kubernetes.io/name: higress-console
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  ingressClassName: higress
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: higress-console-prometheus
                port:
                  number: 9090
      host: "console.higress.io"
